// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultiSelect should match a snapshot and render children 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-multi-select"
      >
        <span>
          Some Value
        </span>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-multi-select"
    >
      <span>
        Some Value
      </span>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`MultiSelectChip should match a snapshot and render children 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <input
        class="el-multi-select-checkbox"
        id="test-id"
        type="checkbox"
      />
      <label
        class="el-multi-select-label"
        for="test-id"
      >
        <span>
          Some Value
        </span>
      </label>
    </div>
  </body>,
  "container": <div>
    <input
      class="el-multi-select-checkbox"
      id="test-id"
      type="checkbox"
    />
    <label
      class="el-multi-select-label"
      for="test-id"
    >
      <span>
        Some Value
      </span>
    </label>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`MultiSelectInput should match a snapshot and render children 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-multi-select-input-wrapper"
      >
        <input
          class="el-multi-select-input"
          id="react-example"
        />
        <div
          class="el-multi-select-selected"
        >
          <input
            checked=""
            class="el-multi-select-checkbox"
            id="test-static-id"
            type="checkbox"
          />
          <label
            class="el-multi-select-label"
            for="test-static-id"
          >
            Item one
          </label>
        </div>
        <div
          class="el-multi-select-un-selected"
        >
          <input
            class="el-multi-select-checkbox"
            id="test-static-id"
            type="checkbox"
          />
          <label
            class="el-has-grey-chips el-multi-select-label"
            for="test-static-id"
          >
            Item two
          </label>
          <input
            class="el-multi-select-checkbox"
            id="test-static-id"
            type="checkbox"
          />
          <label
            class="el-has-grey-chips el-multi-select-label"
            for="test-static-id"
          >
            Item three
          </label>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-multi-select-input-wrapper"
    >
      <input
        class="el-multi-select-input"
        id="react-example"
      />
      <div
        class="el-multi-select-selected"
      >
        <input
          checked=""
          class="el-multi-select-checkbox"
          id="test-static-id"
          type="checkbox"
        />
        <label
          class="el-multi-select-label"
          for="test-static-id"
        >
          Item one
        </label>
      </div>
      <div
        class="el-multi-select-un-selected"
      >
        <input
          class="el-multi-select-checkbox"
          id="test-static-id"
          type="checkbox"
        />
        <label
          class="el-has-grey-chips el-multi-select-label"
          for="test-static-id"
        >
          Item two
        </label>
        <input
          class="el-multi-select-checkbox"
          id="test-static-id"
          type="checkbox"
        />
        <label
          class="el-has-grey-chips el-multi-select-label"
          for="test-static-id"
        >
          Item three
        </label>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`MultiSelectInput should match a snapshot and render non selected message where there are no selected items 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-multi-select-input-wrapper"
      >
        <input
          class="el-multi-select-input"
          id="react-example"
        />
        <div
          class="el-multi-select-selected"
        >
          <span
            class="el-ml2 el-icon-size-medium el-icon"
          >
            <svg />
          </span>
          <p>
            No items selected
          </p>
        </div>
        <div
          class="el-multi-select-un-selected"
        >
          <input
            class="el-multi-select-checkbox"
            id="test-static-id"
            type="checkbox"
          />
          <label
            class="el-has-grey-chips el-multi-select-label"
            for="test-static-id"
          >
            Item one
          </label>
          <input
            class="el-multi-select-checkbox"
            id="test-static-id"
            type="checkbox"
          />
          <label
            class="el-has-grey-chips el-multi-select-label"
            for="test-static-id"
          >
            Item two
          </label>
          <input
            class="el-multi-select-checkbox"
            id="test-static-id"
            type="checkbox"
          />
          <label
            class="el-has-grey-chips el-multi-select-label"
            for="test-static-id"
          >
            Item three
          </label>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-multi-select-input-wrapper"
    >
      <input
        class="el-multi-select-input"
        id="react-example"
      />
      <div
        class="el-multi-select-selected"
      >
        <span
          class="el-ml2 el-icon-size-medium el-icon"
        >
          <svg />
        </span>
        <p>
          No items selected
        </p>
      </div>
      <div
        class="el-multi-select-un-selected"
      >
        <input
          class="el-multi-select-checkbox"
          id="test-static-id"
          type="checkbox"
        />
        <label
          class="el-has-grey-chips el-multi-select-label"
          for="test-static-id"
        >
          Item one
        </label>
        <input
          class="el-multi-select-checkbox"
          id="test-static-id"
          type="checkbox"
        />
        <label
          class="el-has-grey-chips el-multi-select-label"
          for="test-static-id"
        >
          Item two
        </label>
        <input
          class="el-multi-select-checkbox"
          id="test-static-id"
          type="checkbox"
        />
        <label
          class="el-has-grey-chips el-multi-select-label"
          for="test-static-id"
        >
          Item three
        </label>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`MultiSelectSelected should match a snapshot and render children 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-multi-select-selected"
      >
        <span>
          Some Value
        </span>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-multi-select-selected"
    >
      <span>
        Some Value
      </span>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`MultiSelectUnSelected should match a snapshot and render children 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-multi-select-un-selected"
      >
        <span>
          Some Value
        </span>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-multi-select-un-selected"
    >
      <span>
        Some Value
      </span>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
